2012-02-26 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added GNU Binutils development team to external sources;
	  removed Conservative garbage collector for C & C++
	  from extrnal sources since it is not used by sdcc any more

2012-01-23 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  changed gbz80 status from unmaintained to experimental

2011-11-28 Borut Razem <borut.razem AT siol.net>

	* index.php: corrected PastNews, dedication to Dennis M. Ritchie

2011-11-27 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 release

2011-11-22 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 RC3

2011-11-18 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 RC2
	* previous.php: added old news

2011-11-06 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 3.1.0 RC1

2011-10-17 Borut Razem <borut.razem AT gmail.net>

	* index.php: added dedication to Dennis M. Ritchie

2011-10-14 Borut Razem <borut.razem AT gmail.net>

	* index.php: added Leland Morrison to the developers list,
	  added Rabbit 2000 and z180 targets, adde basic long long support

2011-08-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* snap.php: show time as UTC

2011-08-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* snap_header.php: added max-age=3600 header for caching browsers

2011-06-21 Borut Razem <borut.razem AT gmail.net>

	* regtest.php: removed XHTML 1.0 validation errors
	* index.php, snap_header.php, previous.php, links.php:
	  style.css moved to styles/

2011-06-19 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php, regtest.php: added possibility to download
	  regression test results database in csv.bz2 format

2011-06-12 Borut Razem <borut.razem AT gmail.net>

	* download_regtests_db.php, snap.php, update_regtests_db.php,
	  snap_header.php, get_regtest.php: corrected license text
	* regtests.php: select the build on the given date
